test/files/neg/t7808b.check
t7808b.scala:5: error: recursive value x$1 needs type
    val (ls, rs) = z match {
         ^
1 error
